feat: get all user request reports
